<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NeedIt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dialog">Need It</string>
    <string name="google">Google</string>
    <string name="googleimage">Google Image</string>
    <string name="naver">Naver</string>
    <string name="daum">Daum</string>
    <string name="youtube">Youtube</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="local">Application Menu</string>
    <string name="show_map">Show Map</string>
    <string name="hide_map">Hide Map</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="voice_search">Say Words to search</string>
    <string name="loading_location">Get current location now...</string>
    <string name="gpsdisabled">Your GPS is disable. Would you like to enable it?</string>
    <string name="gpsoff">GPS was disabled</string>
    <string name="enablegps">Enable GPS</string>
    <string name="nothanks">No Thanks</string>
    <string name="service_notification">Tap to Search</string>
    <string name="exit_app">Do you want exit NeedIt?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="action_advanced">Settings</string>
    <string name="action_share">Share</string>
    <string name="query_hint">Pictures of</string>
    <string name="search">Search</string>
    <string name="title_activity_advanced">Advanced Search Options</string>
    <string name="image_size">Image size</string>
    <string name="color_filter">Color filter</string>
    <string name="image_type">Image type</string>
    <string name="site_filter">Site filter</string>
    <string name="site_filter_hint">Enter domain</string>
    <string name="save_settings">Save</string>
    <string name="reset_settings">Reset</string>
    <string name="title_activity_image">Image</string>
    <string name="load_more">Load More</string>
    <string name="share">Send image with</string>
    <string name="title_activity_free">Sorry!</string>
    <string name="sorry">Sorry. \nThis Feature is only for the NeedIt Pro Version. \nIf you want more various features for NeedIt, then get NeedIt Pro!</string>
    <string name="proversion"><b>Pro Features : </b>\n<li>Various Settings</li></string>
    <string name="getpro">Get Pro</string>
    <string name="on_float">Start NeedIt</string>
    
    <!-- Tutorial -->
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="tutorial_run">Run NeedIt</string>
    <string name="tutorial_run_desc">Click the NeedIt Icon that floating your screen. \nIt will open NeedIt Search Dialog directly. \nAlso It can move right away you drag it.</string>
    <string name="tutorial_menu">Open Menu</string>
    <string name="tutorial_menu_desc">In Search Dialog, Long click the NeedIt Icon. This will open Application Menu. \nIn Menu, you can select go to NeedIt Settings and exit NeedIt</string>
    <string name="tutorial_googleimage">Google Image Search</string>
    <string name="tutorial_googleimage_desc">Google supports Image Search. \nIn Google, tab Image button. And type your word to search. \nNeedIt will bring the results for you. </string>

    <!-- Preference -->
    <string name="pref_settings">NeedIt Settings</string>
    <string name="pref_generalsettings">General Settings</string>
    <string name="pref_othersettings">Other Settings</string>
    <string name="pref_tabsettings">Tab Settings</string>
    <string name="pref_mapsettings">Map Settings</string>
    <string name="pref_googleimage">Google Image Search</string>
    <string name="pref_show_google">Google</string>
    <string name="pref_show_google_desc">Google can not hide from tab.</string>
    <string name="pref_show_naver">Naver</string>
    <string name="pref_show_daum">Daum</string>
    <string name="pref_show_youtube">Youtube</string>
    <string name="pref_show_wikipedia">Wikipedia</string>
    <string name="pref_show_local">Local Search</string>
    <string name="pref_searchsettings">Search Settings</string>
    <string name="pref_hide_zoom">Hide Zoom button</string>
    <string name="pref_hide_zoom_desc">Hide Zoom button in search results.</string>
    <string name="pref_boot">Auto Run</string>
    <string name="pref_boot_desc">Run NeedIt when phone booted.</string>
    <string name="pref_mapview_mode">Map View Mode</string>
    <string name="mapview_vector">Normal</string>
    <string name="mapview_hybrid">Hybrid</string>
    <string name="restart">Restart NeedIt</string>
    <string name="viewstyle_floating">Floating Icon</string>
    <string name="viewstyle_notification">Ongoing Notification</string>
    <string name="pref_show_country">Show Country name</string>
    <string name="pref_show_country_desc">Show your country name on current location.</string>
    <string name="pref_viewstyle">View Style</string>
    <string name="pref_viewstyle_desc">Change style of floating view. Notification or Floating.</string>
    <string name="toast_viewstyle">This option will change when app is rebooted.</string>

</resources>
