<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context=".AdvancedActivity" >

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/image_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageSize"
        android:layout_below="@+id/tvImageSize"
        android:layout_marginTop="20dp"
        android:text="@string/color_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_below="@+id/tvColorFilter"
        android:layout_marginTop="20dp"
        android:text="@string/image_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageType"
        android:layout_below="@+id/tvImageType"
        android:layout_marginTop="20dp"
        android:text="@string/site_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spnImageType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvImageType"
        android:layout_alignBaseline="@id/tvImageType"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tvImageType" />

    <Spinner
        android:id="@+id/spnColorFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tvColorFilter"
        android:layout_alignBaseline="@id/tvColorFilter"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/tvImageType" />

    <Spinner
        android:id="@+id/spnImageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tvImageSize"
        android:layout_alignBaseline="@id/tvImageSize"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/tvImageType" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvSiteFilter"
        android:layout_alignTop="@id/tvSiteFilter"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/tvImageType"
        android:hint="@string/site_filter_hint" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSiteFilter"
        android:layout_below="@+id/etSiteFilter"
        android:layout_marginTop="20dp"        
        android:text="@string/reset_settings"
        android:onClick="reset" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnReset"
        android:layout_alignBottom="@+id/btnReset"
        android:layout_toRightOf="@+id/btnReset"
        android:text="@string/save_settings"
        android:onClick="save" />
    
</RelativeLayout>
