<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/daylight"
    android:fitsSystemWindows="true"
    android:layoutAnimation="@anim/anim_cling_box_bottom"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center"
            android:shadowColor="#40000000"
            android:shadowDx="0"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/hello_world"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center"
            android:shadowColor="#40000000"
            android:shadowDx="0"
            android:shadowDy="5"
            android:shadowRadius="15"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="normal" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:scrollbarDefaultDelayBeforeFade="20"
        android:scrollbarFadeDuration="10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dip"
            android:layoutAnimation="@anim/anim_cling_box_bottom"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_needit" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_google" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_naver" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_daum" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_youtube" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dip"
                android:src="@drawable/circle_wikipedia" />
        </LinearLayout>
    </HorizontalScrollView>

    
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutAnimation="@anim/anim_cling_box_bottom"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dip"
            android:background="#cccccc" />

        <Button
            android:id="@+id/btn_float"
            android:layout_width="match_parent"
            android:layout_height="56dip"
            android:layout_weight="1"
            android:background="@drawable/action_btn_bg"
            android:drawableLeft="@drawable/main_shortcut"
            android:gravity="left|center"
            android:text="@string/on_float"
            android:textColor="#494949" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dip"
            android:background="#cccccc" />

        <Button
            android:id="@+id/btn_tutorial"
            android:layout_width="match_parent"
            android:layout_height="56dip"
            android:layout_weight="1"
            android:background="@drawable/action_btn_bg"
            android:drawableLeft="@drawable/main_shortcut"
            android:gravity="left|center"
            android:text="@string/title_activity_tutorial"
            android:textColor="#494949" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dip"
            android:background="#cccccc" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="56dip"
            android:layout_weight="1"
            android:background="@drawable/action_btn_bg"
            android:drawableLeft="@drawable/main_shortcut"
            android:gravity="left|center"
            android:text="@string/action_settings"
            android:textColor="#494949" />
    </LinearLayout>

</LinearLayout>